--- a/Lab/demo/Lab/CMakeLists.txt
+++ b/Lab/demo/Lab/CMakeLists.txt
@@ -407,6 +407,11 @@ if(CGAL_Qt6_FOUND AND Qt6_FOUND)
   target_link_libraries(CGAL_Mesh_3 PRIVATE cgal_lab)
   add_to_cached_list(CGAL_EXECUTABLE_TARGETS CGAL_Mesh_3)
 
+  add_executable(CGAL_CDT_3 CGAL_Lab_CDT_3.cpp)
+  add_dependencies(CGAL_CDT_3 CDT_3 Viewer)
+  target_link_libraries(CGAL_CDT_3 PRIVATE cgal_lab)
+  add_to_cached_list(CGAL_EXECUTABLE_TARGETS CGAL_CDT_3)
+
   add_executable(CGAL_Classification Classification.cpp)
   add_dependencies(CGAL_Classification Classification)
   target_link_libraries(CGAL_Classification PRIVATE cgal_lab)
