--- a/Basic_viewer/examples/Basic_viewer/CMakeLists.txt
+++ b/Basic_viewer/examples/Basic_viewer/CMakeLists.txt
@@ -22,10 +22,12 @@ create_single_source_cgal_program("draw_surface_mesh_vcolor.cpp")
 
 if(CGAL_Qt6_FOUND)
   #link it with the required CGAL libraries
-  target_link_libraries(draw_lcc PUBLIC CGAL::CGAL_Basic_viewer)
-  target_link_libraries(draw_several_windows PUBLIC CGAL::CGAL_Basic_viewer)
-  target_link_libraries(draw_surface_mesh_small_faces PUBLIC CGAL::CGAL_Basic_viewer)
-  target_link_libraries(draw_surface_mesh_vcolor PUBLIC CGAL::CGAL_Basic_viewer)
+  target_link_libraries(draw_lcc PUBLIC CGAL::CGAL_Basic_viewer_Qt)
+  target_link_libraries(draw_several_windows PUBLIC CGAL::CGAL_Basic_viewer_Qt)
+  target_link_libraries(draw_surface_mesh_small_faces PUBLIC CGAL::CGAL_Basic_viewer_Qt)
+  target_link_libraries(draw_mesh_and_points PUBLIC CGAL::CGAL_Basic_viewer_Qt)
+  target_link_libraries(draw_surface_mesh_vcolor PUBLIC CGAL::CGAL_Basic_viewer_Qt)
+  # target_link_libraries(draw_surface_mesh_height PUBLIC CGAL::CGAL_Basic_viewer_Qt)
 else()
   message("CGAL_Qt6 not configured: examples that require Qt will not be compiled.")
 endif()
