--- a/Lab/demo/Lab/Plugins/IO/CMakeLists.txt
+++ b/Lab/demo/Lab/Plugins/IO/CMakeLists.txt
@@ -22,7 +22,7 @@ cgal_lab_plugin(nef_io_plugin Nef_io_plugin KEYWORDS Viewer)
 target_link_libraries(nef_io_plugin PUBLIC scene_nef_polyhedron_item)
 
 cgal_lab_plugin(off_plugin OFF_io_plugin
-  KEYWORDS Viewer Mesh_3 PointSetProcessing Classification PMP)
+  KEYWORDS Viewer Mesh_3 PointSetProcessing Classification PMP IO_surface_meshes)
 target_link_libraries(off_plugin PUBLIC scene_polygon_soup_item scene_points_with_normal_item scene_surface_mesh_item)
 
 cgal_lab_plugin(off_to_nef_plugin OFF_to_nef_io_plugin KEYWORDS Viewer)
@@ -34,10 +34,10 @@ target_link_libraries(polylines_io_plugin PUBLIC scene_polylines_item)
 cgal_lab_plugin(wkt_plugin WKT_io_plugin KEYWORDS Viewer PointSetProcessing Mesh_3)
 target_link_libraries(wkt_plugin PUBLIC scene_polylines_item)
 
-cgal_lab_plugin(stl_plugin STL_io_plugin KEYWORDS Viewer PMP)
+cgal_lab_plugin(stl_plugin STL_io_plugin KEYWORDS Viewer PMP IO_surface_meshes)
 target_link_libraries(stl_plugin PUBLIC scene_surface_mesh_item scene_polygon_soup_item)
 
-cgal_lab_plugin(surf_io_plugin Surf_io_plugin KEYWORDS Viewer PMP)
+cgal_lab_plugin(surf_io_plugin Surf_io_plugin KEYWORDS Viewer PMP IO_surface_meshes)
 target_link_libraries(surf_io_plugin PUBLIC scene_surface_mesh_item)
 
 cgal_lab_plugin(lcc_io_plugin lcc_io_plugin KEYWORDS Viewer)
@@ -79,7 +79,7 @@ endif()
 cgal_lab_plugin(xyz_plugin XYZ_io_plugin KEYWORDS Viewer PointSetProcessing Classification)
 target_link_libraries(xyz_plugin PUBLIC scene_points_with_normal_item)
 
-cgal_lab_plugin(ply_plugin PLY_io_plugin KEYWORDS Viewer PointSetProcessing Classification PMP)
+cgal_lab_plugin(ply_plugin PLY_io_plugin KEYWORDS Viewer PointSetProcessing Classification PMP IO_surface_meshes)
 target_link_libraries(ply_plugin PUBLIC scene_points_with_normal_item scene_polygon_soup_item scene_surface_mesh_item scene_textured_item)
 if (TARGET CGAL::LASLIB_support)
   cgal_lab_plugin(las_plugin LAS_io_plugin KEYWORDS Viewer PointSetProcessing Classification)
