proper license; internal::registration; move in CMakeLists

--- a/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
+++ b/Polygon_mesh_processing/examples/Polygon_mesh_processing/CMakeLists.txt
@@ -57,7 +57,6 @@ create_single_source_cgal_program("hausdorff_bounded_error_distance_example.cpp"
 create_single_source_cgal_program("isotropic_remeshing_with_custom_sizing_example.cpp")
 create_single_source_cgal_program("triangle_mesh_autorefinement.cpp")
 create_single_source_cgal_program("soup_autorefinement.cpp")
-create_single_source_cgal_program("non_rigid_mesh_registration_example.cpp")
 
 find_package(Eigen3 3.2.0 QUIET) #(requires 3.2.0 or greater)
 include(CGAL_Eigen3_support)
@@ -90,6 +89,8 @@ if(TARGET CGAL::Eigen3_support)
   target_link_libraries(interpolated_corrected_curvatures_PH PUBLIC CGAL::Eigen3_support)
   create_single_source_cgal_program("interpolated_corrected_curvatures_vertex.cpp")
   target_link_libraries(interpolated_corrected_curvatures_vertex PUBLIC CGAL::Eigen3_support)
+  create_single_source_cgal_program("non_rigid_mesh_registration_example.cpp")
+    target_link_libraries(non_rigid_mesh_registration_example PUBLIC CGAL::Eigen3_support)
 else()
   message(STATUS "NOTICE: Examples that use Eigen will not be compiled.")
 endif()
