--- a/BGL/examples/BGL_OpenMesh/CMakeLists.txt
+++ b/BGL/examples/BGL_OpenMesh/CMakeLists.txt
@@ -12,6 +12,9 @@ if(OpenMesh_FOUND)
   include(UseOpenMesh)
   create_single_source_cgal_program("TriMesh.cpp")
   target_link_libraries(TriMesh PRIVATE ${OPENMESH_LIBRARIES})
+
+  create_single_source_cgal_program("PolyMesh.cpp")
+  target_link_libraries(PolyMesh PRIVATE ${OPENMESH_LIBRARIES})
 else()
   message("NOTICE: This project requires OpenMesh and will not be compiled.")
 endif()
