--- a/.github/workflows/winget.yml
+++ b/.github/workflows/winget.yml
@@ -1,8 +1,10 @@
+# docs: https://github.com/microsoft/winget-create
+# examples:
+# https://github.com/microsoft/devhome/blob/main/.github/workflows/winget-submission.yml
+# https://github.com/microsoft/terminal/blob/main/.github/workflows/winget.yml
 name: Publish to Winget
 
-on:
-  pull_request:
-    types: [synchronize]
+on: [release]
 
 jobs:
   publish:
